--- a/custom.css
+++ b/custom.css
@@ -6,84 +6,108 @@ header > section.row {
 #text-container {
   position: absolute;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 #text-container > div {
-  display: none;
-}
-#slide1 {
-
-}
-#slide2 {
-
-}
-#slide3 {
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 
 }
 div#text-container h2 {
-  font-size: 2.5em;
   font-family: lexia-advertising, serif;
   font-style: normal;
   font-weight: 400;
   color: white;
   text-shadow: 2px 2px 8px black;
+  text-transform: none;
+  /*display: none;*/
 }
 div#text-container p {
-  font-size: 1.5em;
-  font-family: lexia-advertising, serif;
+  text-transform: none;
+  font-family: 'Varela Round', sans-serif;
   font-style: normal;
   font-weight: 400;
   color: white;
   text-shadow: 2px 2px 6px black;
+  /*display: none;*/
 }
 video {
   height: 100%;
   width: 100%;
   overflow: hidden;
 }
-@media only screen and (min-width: 0px) {
-  #text-container {
-    left:7%;
-    top: 7%;
-    max-width: 86%;
-  }
-  div#text-container h2 {
-    font-size: 2em;
-  }
-  div#text-container p {
-    font-size: 1.5em;
-  }
-}
 div#screen {
   position: absolute;
   left: 0; top:0;
   height:100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-image: url(headerVideo.png);
+  display: none;
 }
-@media only screen and (min-width: 580px) {
+@media only screen and (min-width: 10px) {
+  #text-container {
+    left:2.5%;
+    top: 20%;
+    max-width: 95%;
+  }
+  div#text-container h2 {
+    font-size: 1.25em;
+    line-height: 1.25em;
+  }
+  div#text-container p {
+    margin-top: .5em;
+    font-size: .7em;
+    line-height: 1.5em;
+  }
+}
+@media only screen and (min-width: 560px) {
   #text-container {
     left:10%;
-    top: 10%;
     max-width: 80%;
   }
   div#text-container h2 {
-    font-size: 3em;
+    font-size: 1.75em;
+    line-height: 1.25em;
   }
   div#text-container p {
-    font-size: 2.5em;
+    margin-top: .5em;
+    font-size: 1em;
+    line-height: 1.5em;
   }
 }
-@media only screen and (min-width: 856px) {
-  #text-container {
-    left: 20%;
-    top: 20%;
-    max-width: 60%;
+@media only screen and (min-width: 791px) {
+  div#text-container h2 {
+    font-size: 2.25em;
+    line-height: 1.25em;
   }
-    div#text-container h2 {
-      font-size: 3.6em;
-    }
-    div#text-container p {
-      font-size: 3em;
-    }
+  div#text-container p {
+    margin-top: .75em;
+    font-size: 1.5em;
+    line-height: 1.5em;
+  }
+}
+@media only screen and (min-width: 940px) {
+  div#text-container h2 {
+    font-size: 3em;
+    line-height: 1.25em;
+  }
+  div#text-container p {
+    margin-top: 1em;
+    font-size: 1.75em;
+    line-height: 1.5em;
+  }
+}
+@media only screen and (min-width: 1100px) {
+  div#text-container h2 {
+    font-size: 3.5em;
+    line-height: 1.25em;
+  }
+  div#text-container p {
+    margin-top: 1em;
+    font-size: 2em;
+    line-height: 1.5em;
   }
 }
